--- a/que_es_css.html
+++ b/que_es_css.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Que es CSS</title>
+</head>
+<body>
+    <h1>Que es CSS</h1>
+    <p>CSS (Cascading Style Sheets) es un lenguaje que define el estilo y diseño de páginas web, separando la estructura HTML del aspecto visual. Permite mantener un diseño uniforme y facilita su actualización.</p>
+</body>
+</html>
