--- a/que_es_css.html
+++ b/que_es_css.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Que es CSS</h1>
-    <p>CSS (Cascading Style Sheets) es un lenguaje que define el estilo y diseño de páginas web, separando la estructura HTML del aspecto visual. Permite mantener un diseño uniforme y facilita su actualización.</p>
+    <p>CSS (Cascading Style Sheets) es un lenguaje que define el estilo y diseño de páginas web, <br>separando la estructura HTML del aspecto visual. Permite mantener un diseño uniforme y facilita su <br>actualización.</p>
+    <h1>Formas de aplicar CSS en HTML</h1>
+    
 </body>
 </html>
