--- a/que_es_css.html
+++ b/que_es_css.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Introducción a CSS</h1>
 
-    <h2>1. ¿Qué es CSS y para qué sirve?</h2>
+    <h2>¿Qué es CSS y para qué sirve?</h2>
     <p>CSS (Cascading Style Sheets) es un lenguaje que se utiliza para definir el estilo y diseño visual de las páginas web. Separa el contenido HTML de su apariencia, permitiendo una fácil personalización y mantenimiento del diseño de una web.</p>
 
-    <h2>2. Formas de aplicar CSS en HTML</h2>
+    <h2>Formas de aplicar CSS en HTML</h2>
 
     <h3>CSS en línea (inline)</h3>
     <p>Se aplica directamente en el atributo <code>style</code> de un elemento HTML:</p>
@@ -32,12 +32,5 @@
     <code>
         &lt;link rel="stylesheet" href="estilos.css"&gt;
     </code>
-
-    <h2>3. Recursos de aprendizaje</h2>
-    <ul class="resources">
-        <li><strong>MDN Web Docs</strong>: <a href="https://developer.mozilla.org/es/docs/Web/CSS" target="_blank">Documentación oficial de CSS</a>.</li>
-        <li><strong>W3Schools</strong>: <a href="https://www.w3schools.com/css/" target="_blank">Tutoriales interactivos sobre CSS</a>.</li>
-        <li><strong>CSS-Tricks</strong>: <a href="https://css-tricks.com/" target="_blank">Técnicas avanzadas y guías sobre CSS</a>.</li>
-    </ul>
 </body>
 </html>
