--- a/colores_y_fuentes.html
+++ b/colores_y_fuentes.html
@@ -39,7 +39,7 @@
         }
 
         /* Estilos para párrafos con clase especial */
-        p.destacado {
+        .diferente {
             color: #555;
             font-family: 'Times New Roman', serif;
             font-size: 20px;
@@ -57,6 +57,6 @@
     <h3>Ventajas de Usar CSS</h3>
     <p>Separar el contenido (HTML) del diseño (CSS) permite crear sitios web más flexibles y fáciles de mantener.</p>
     
-    <p class="destacado">Este es un párrafo destacado con un estilo diferente aplicado a través de una clase CSS.</p>
+    <p class="diferente">Este es un párrafo con un estilo diferente aplicado a través de una clase con CSS.</p>
 </body>
 </html>
