--- a/que_es_css.html
+++ b/que_es_css.html
@@ -9,7 +9,7 @@
     <h1>Introducción a CSS</h1>
 
     <h2>¿Qué es CSS y para qué sirve?</h2>
-    <p>CSS (Cascading Style Sheets) es un lenguaje que se utiliza para definir el estilo y diseño visual de las páginas web. Separa el contenido HTML de su apariencia, permitiendo una fácil personalización y mantenimiento del diseño de una web.</p>
+    <p>CSS es un lenguaje que se utiliza para definir el estilo y diseño visual de las páginas web. Separa el contenido HTML de su apariencia, permitiendo una fácil personalización y mantenimiento del diseño de una web.</p>
 
     <h2>Formas de aplicar CSS en HTML</h2>
 
