--- a/padding.html
+++ b/padding.html
@@ -10,6 +10,8 @@
         margin: 10px;
         background-color: orange;
         border: 10px grey solid;
+        width: 50%;
+        height: 20%;
       }
     </style>
 </head>
