--- a/padding.html
+++ b/padding.html
@@ -10,8 +10,9 @@
         margin: 10px;
         background-color: orange;
         border: 10px grey solid;
-        width: 50%;
+        width: 30%;
         height: 20%;
+        text-align: center;
       }
     </style>
 </head>
