--- a/padding.html
+++ b/padding.html
@@ -24,7 +24,7 @@
     <h1>Ejemplo practico</h1>
     <div class="exterior">
         <div class="bloque">
-          <p>-</p>
+          <p>Este es el bloque de ejemplo</p>
         </div>
     </div>
 </body>
