--- a/padding.html
+++ b/padding.html
@@ -10,6 +10,7 @@
             text-align: center;
         }
         .bloque{
+            border: 10px solid grey;
             padding: 10px;
             margin: 10px;
             background-color: orange;
