--- a/padding.html
+++ b/padding.html
@@ -10,7 +10,7 @@
             text-align: center;
         }
         .bloque{
-            border: 10px solid grey;
+            border: 10px solid blue;
             padding: 100px;
             margin: 10px;
             background-color: orange;
