--- a/padding.html
+++ b/padding.html
@@ -6,13 +6,14 @@
     <title>padding</title>
     <style>
         .exterior{
-            border: 10px solid grey;
+            border: 10px solid blue;
+            margin: 10px;
+            padding: 10px;
+            width: 30%;
+            height: 20%;
             text-align: center;
         }
         .bloque{
-            border: 10px solid blue;
-            padding: 100px;
-            margin: 10px;
             background-color: orange;
             width: 30%;
             height: 20%;
