--- a/padding.html
+++ b/padding.html
@@ -15,6 +15,8 @@
         }
         .bloque{
             background-color: orange;
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
