--- a/padding.html
+++ b/padding.html
@@ -9,6 +9,8 @@
             border: 10px solid blue;
             margin: 20px;
             padding: 20px;
+            width: 20%;
+            height: 50%;
             text-align: center;
         }
         .bloque{
