--- a/padding.html
+++ b/padding.html
@@ -21,8 +21,20 @@
     </style>
 </head>
 <body>
+
     <h1>Padding, Margin, Border, Width and Height</h1>
-    <p>Explicación de cosas</p>
+        <h2>Padding (Relleno)</h2>
+        <p>El <strong>padding</strong> es el espacio entre el contenido de un elemento y su borde. En este caso, el padding es de 20px, lo que significa que el contenido está separado del borde por ese espacio.</p>
+
+        <h2>Margin (Margen)</h2>
+        <p>El <strong>margin</strong> es el espacio fuera del borde de un elemento. En este caso, el margen es de 30px, lo que separa este elemento de otros elementos circundantes.</p>
+
+        <h2>Border (Borde)</h2>
+        <p>El <strong>border</strong> es el borde del elemento, y en este caso es de 5px de ancho, de color azul.</p>
+
+        <h2>Width (Ancho) y Height (Altura)</h2>
+        <p>El <strong>width</strong> es el ancho de un elemento, y el <strong>height</strong> es la altura. Aquí, el ancho es de 200px y la altura es de 150px. Estos valores definen el tamaño del área de contenido del elemento.</p>
+
     <h1>Ejemplo practico</h1>
     <div class="exterior">
         <div class="bloque">
