--- a/padding.html
+++ b/padding.html
@@ -6,12 +6,12 @@
     <title>padding</title>
     <style>
         .exterior{
-            border: 10px solid blue;
-            margin: 20px;
+            width: 200px;
+            height: 150px;
+            border: 5px solid blue;
             padding: 20px;
-            width: 20%;
-            height: 50%;
-            text-align: center;
+            margin: 30px;
+            background-color: white;
         }
         .bloque{
             background-color: orange;
