--- a/padding.html
+++ b/padding.html
@@ -15,8 +15,8 @@
         }
         .bloque{
             background-color: orange;
-            width: 100%;
-            height: 100%;
+            max-width: 600px;
+            margin: 20px auto;
         }
     </style>
 </head>
