--- a/padding.html
+++ b/padding.html
@@ -16,6 +16,7 @@
         .bloque{
             background-color: orange;
             max-width: 600px;
+            width: 100%;
             margin: 20px auto;
         }
     </style>
