--- a/padding.html
+++ b/padding.html
@@ -15,7 +15,7 @@
         }
         .bloque{
             background-color: orange;
-            width: 100%;
+            height: 100%;
             margin: 20px auto;
         }
     </style>
