--- a/padding.html
+++ b/padding.html
@@ -16,7 +16,7 @@
         .bloque{
             background-color: orange;
             height: 100%;
-            margin: 20px auto;
+            margin: 20px 0px;
         }
     </style>
 </head>
