--- a/padding.html
+++ b/padding.html
@@ -8,8 +8,8 @@
         .exterior{
             width: 200px;
             height: 200px;
-            border: 5px solid blue;
-            padding: 30px;
+            border: 10px solid blue;
+            padding: 30px 30px 30px 30px;
             margin: 30px;
         }
         .bloque{
