--- a/padding.html
+++ b/padding.html
@@ -11,6 +11,7 @@
             border: 10px solid blue;
             padding: 30px 30px 30px 30px;
             margin: 30px;
+            text-align: center;
         }
         .bloque{
             background-color: orange;
