--- a/padding.html
+++ b/padding.html
@@ -16,6 +16,7 @@
         .bloque{
             background-color: orange;
             height: 100%;
+            text-align: center;
         }
     </style>
 </head>
