--- a/padding.html
+++ b/padding.html
@@ -9,7 +9,7 @@
             width: 200px;
             height: 200px;
             border: 10px solid blue;
-            padding: 30px 30px 30px 30px;
+            padding: 30px;
             margin: 30px;
             text-align: center;
         }
