--- a/padding.html
+++ b/padding.html
@@ -14,6 +14,7 @@
             text-align: center;
         }
         .bloque{
+            display: flex;
             background-color: orange;
             height: 100%;
             width: 100%;
