tarjeta_presentacion.html

--- a/tarjeta_presentacion.html
+++ b/tarjeta_presentacion.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="tarjeta">
-        <h2>Tu Nombre Completo</h2>
-        <h3>Tu Profesión o Título</h3>
+        <h2>Héctor Larrosa Martínez</h2>
+        <h3>Programador</h3>
         <p>Soy una persona apasionada por el aprendizaje y el desarrollo continuo. Me encanta explorar nuevas tecnologías y aplicarlas para resolver problemas creativos.</p>
     </div>
 </body>
