--- a/tarjeta_presentacion.html
+++ b/tarjeta_presentacion.html
@@ -10,7 +10,7 @@
     <div class="tarjeta">
         <h2>Héctor Larrosa Martínez</h2>
         <h3>Programador</h3>
-        <p>Soy una persona apasionada por el aprendizaje y el desarrollo continuo. Me encanta explorar nuevas tecnologías y aplicarlas para resolver problemas creativos.</p>
+        <p>Soy una persona que le gusta aprender cosas nuevas sobre la programación y diseño de aplicaciones web. Me encanta explorar nuevas tecnologías y aplicarlas para resolver problemas creativos.</p>
     </div>
 </body>
 </html>
