--- a/class_id.html
+++ b/class_id.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clases e Identificadores en CSS</title>
+    <link rel="stylesheet" href="/CSS/class_id_style.css">
+</head>
+<body>
+    <h1 id="titulo">Mi página web</h1>
 
+    <p class="texto">Este es el primer párrafo.</p>
+    <p class="texto">Este es el segundo párrafo.</p>
+    <p class="texto">Este es el tercer párrafo.</p>
+
+    <button class="boton" id="botonEnviar">Enviar</button>
+</body>
+</html>
