--- a/class_id.html
+++ b/class_id.html
@@ -9,9 +9,9 @@
 <body>
     <h1 id="titulo">Mi página web</h1>
 
-    <p class="texto">Este es el primer párrafo.</p>
-    <p class="texto">Este es el segundo párrafo.</p>
-    <p class="texto">Este es el tercer párrafo.</p>
+    <p class="texto">primer párrafo.</p>
+    <p class="texto">segundo párrafo.</p>
+    <p class="texto">tercer párrafo.</p>
 
     <button class="boton" id="botonEnviar">Enviar</button>
 </body>
