--- a/combinacion_id_clases.html
+++ b/combinacion_id_clases.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo de Clases e Identificadores</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="/CSS/combinacion_id_clases_style.css">
 </head>
 <body>
     <h1 class="titulo">Título Principal</h1>
